--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
   <title>Architect Website</title>
 </head>
 <body>
-  
+  <header>
+ <nav>
+  <h3>G3 Architects</h3>
+ <ul>
+  <li><a href="">Home</a></li>
+  <li><a href="">About</a></li>
+  <li><a href="">Contact</a></li>
+  <li><a href="">Login</a></li>
+ </ul>
+ </nav>
+  </header>
+
+ <main>
+
+ </main>
+
+ <footer>
+
+ </footer>
+
 </body>
 </html>
