--- a/index.html
+++ b/index.html
@@ -116,6 +116,25 @@
  </main>
 
  <footer>
+  <div class="sponsor">
+<h3 class="section-title">Our Sponspors</h3>
+<p class="text-light-gray">
+  There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration. 
+</p>
+  
+</div>
+<div class="sponsor-img">
+  <img src="images/sponsors/amazon.png" alt="">
+   <img src="images/sponsors/figma.png" alt="">
+   <img src="images/sponsors/google.png" alt="">
+   <img src="images/sponsors/spotify.png" alt="">
+   <img src="images/sponsors/telerama.png" alt="">
+</div>
+<div class="copyright-section">
+  All rights reserved copyright@2023 startup landing page design
+</div>
+    
+  </div>
 
  </footer>
 
